# rustpad

./: .env  Cargo.toml
.cargo/: config.toml
.helix/: languages.toml
migrations/: 20230918153445_initial_database.down.sql  20230918153445_initial_database.up.sql  20230922184529_Create_users.up.sql  20231002152217_initial.sql  20231002152257_create_users.sql  20240620182322_add_creation_date_to_todo_list_items.sql
src/: authentication.rs  error.rs  main.rs  templates.rs
src/api/: auth.rs  mod.rs  todo.rs
static/: index.css  login.html
templates/: base.html  error.html  index.html  login.html  todo.html  todo_items.html
