[package]
name = "rustpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-htmx = "0.3.1"
axum_static = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
once_cell = "1.18.0"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
